<resources>
    <string name="app_name">To Do</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_save">Save</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="task_time">%1$s to %2$s</string>
    <string name="task_start_time">12:34</string>
    <string name="task_start_date">Sep 11</string>
    <string name="task_end_time">16:34</string>
    <string name="task_end_date">Sep 11</string>

    <string name="task_name_cannot_be_empty">Task name cannot be empty</string>

    <string name="task_timestamp_format">HH:mm dd/MMM</string>
    <string name="task_time_format">HH:mm</string>
    <string name="task_date_format">dd/MMM</string>

    <string name="new_tasks">New</string>
    <string name="current_tasks">Current</string>
    <string name="pending_tasks">Pending</string>
    <string name="completed_tasks">Completed</string>
    <string name="title_activity_task">Tasks</string>

    <string name="new_tasks_notif">New tasks</string>
    <string name="pending_tasks_notif">Pending tasks</string>
    <string name="more_tasks">%1$d more tasks</string>

    <string name="task_marked_complete">Task completed</string>
    <string name="task_marked_incomplete">Task pending</string>
    <string name="undo">Undo</string>
</resources>
