<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.asb.todo.fragments.AddTaskFragment">

    <LinearLayout
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/task_time_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/task_start_group"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/task_time_label_margin"
                android:gravity="center"
                android:text="@string/start"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/task_start_time"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/task_time_margin"
                    android:layout_marginRight="@dimen/task_time_margin"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/task_start_time"/>

                <TextView
                    android:id="@+id/task_start_date"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/task_time_margin"
                    android:layout_marginRight="@dimen/task_time_margin"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/task_start_date"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/task_end_group"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/task_time_label_margin"
                android:gravity="center"
                android:text="@string/end"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/task_time"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/task_time_margin"
                    android:layout_marginRight="@dimen/task_time_margin"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/task_end_time"/>

                <TextView
                    android:id="@+id/task_end_date"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/task_time_margin"
                    android:layout_marginRight="@dimen/task_time_margin"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/task_end_date"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_name">

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:hint="@string/task_description"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"/>
    </android.support.design.widget.TextInputLayout>


</RelativeLayout>
