<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/task_margin"
    android:layout_marginTop="@dimen/task_margin">

    <TextView
        android:id="@+id/task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/complete"
        android:layout_toStartOf="@+id/complete"
        android:text="@string/task_name"
        android:textSize="@dimen/task_name"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/task_name"
        android:layout_toLeftOf="@+id/complete"
        android:layout_toStartOf="@+id/complete"
        android:text="@string/task_description"
        android:textSize="@dimen/task_description"/>

    <TextView
        android:id="@+id/task_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/complete"
        android:layout_marginTop="@dimen/task_time_horizontal_margin"
        android:layout_marginBottom="@dimen/task_time_horizontal_margin"
        android:text="@string/task_time"
        android:textSize="@dimen/task_time"
        android:textStyle="italic"/>

    <CheckBox
        android:id="@+id/complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"/>
</RelativeLayout>